js/js.translator/testData/incremental/invalidationWithPL/removeFunctionFromInline/main/test.kt
fun test(): Int {
    try {
        return inlineFun()
    } catch (e: Error) {
        return 1
    }
}
